--- a/index.html
+++ b/index.html
@@ -5,9 +5,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class = "blueHeader">
+        <div class = "searchBar">
+        <select name="" id="">
+            <option value = "usershortcuts" id="usershortcuts">User Shortcuts</option>
+        </select>
+        <input 
+            type="text" 
+            style="width: 50vw";>
+        </input>
+        <select>
+            <option value = "people" id="people">People</option>
+        </select>
+        <button>Search</button>
+        </div>
+    </div>
+    <div class="menuBar">
     Home | Browse | Search | Invite | Film | Mail | Blogs | Favorites | Forum | Groups | Events | Music | Comedy | Classifieds
+    </div>
     
+    <div class="page">
+
+        <div class="leftColumn">
+            <h2>Jean-Pierre</h2>
+
+            <div class = "profilePic">
+                <img src="http://fc03.deviantart.net/fs71/f/2010/105/4/5/random_person_by_Vurtov.jpg">
+                <span style = 
+                "position: absolute;">
+                    Male<br>
+                    56 years old<br>
+                    DALLAS, TEXAS<br>
+                    United States
+                    <br>
+                    <br>
+                    <br>
+                    Last Login:<br>
+                    4/20/2005
+                </span>
+            </div>
+            
+            <p style="margin-left: 5vw">
+                View My: Pics | Videos
+            </p>
+        </div>
+
+        <div class="rightColumn">
+            <div class="extNetwork">
+                Jean-Pierre is in your extended network
+            </div>
+        </div>
+        <p>
+            <div class="blogs">
+                <p>
+                    Jean-Pierre's Latest Blog Entry [Subscribe to this Blog]<br>
+                    [View All Blog Entries]
+                </p>
+            </div>
+            <br>
+            <div class="blurbs">
+                <h4>Jean-Pierre's Blurbs:</h4>
+                <h5>About me:</h5>
+                <h5>Who I'd like to meet:</h5>
+            </div>
+            <div class="friends">
+                <h4>Jean-Pierre's Friend Space (Top 8)</h4>
+                <p>Jean-Pierre has 108 friends.</p>
+            </div>
+
+        </p>
+
+
+    </div> 
+
+
 </body>
 </html>
