--- a/index.html
+++ b/index.html
@@ -52,3 +52,45 @@
             View My: Pics | Videos
         </p>
     </div>
+
+    <div class="rightColumn">
+        <div class="extNetwork" style="text-align: center;">
+            Jean-Pierre is in your extended network
+        </div>
+
+        <div class="blogs">
+            <p>
+                Jean-Pierre's Latest Blog Entry [Subscribe to this Blog]<br>
+                <br>
+                [View All Blog Entries]
+            </p>
+        </div>
+        <br>
+        <div class="blurbs">
+            <h4>Jean-Pierre's Blurbs:</h4>
+            <h5>About me:</h5>
+            <h5>Who I'd like to meet:</h5>
+        </div>
+        <div class="friends">
+            <h4>Jean-Pierre's Friend Space (Top 8)</h4>
+            <p>Jean-Pierre has 108 friends.</p>
+        </div>
+
+        <h6>
+            Tom Tom Tom Tom<br>
+        <img class="tom" src="http://s3.amazonaws.com/rapgenius/tom_myspace.jpg">
+        <img class="tom" src="http://s3.amazonaws.com/rapgenius/tom_myspace.jpg">
+        <img class="tom" src="http://s3.amazonaws.com/rapgenius/tom_myspace.jpg">
+        <img class="tom" src="http://s3.amazonaws.com/rapgenius/tom_myspace.jpg">
+        <br>
+        <img class="tom" src="http://s3.amazonaws.com/rapgenius/tom_myspace.jpg">
+        <img class="tom" src="http://s3.amazonaws.com/rapgenius/tom_myspace.jpg">
+        <img class="tom" src="http://s3.amazonaws.com/rapgenius/tom_myspace.jpg">
+        <img class="tom" src="http://s3.amazonaws.com/rapgenius/tom_myspace.jpg">
+        </h6>
+    </div>
+  
+
+
+</body>
+</html>
